--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
+.ui.table.expense-table {
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 .App-logo {
@@ -7,26 +14,37 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FFFFFF;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(68, 68, 68, 0.541);
 }
+
+.App-body {
+  background-color: #FFFFFF;
+  height: 100%;
+  margin: 0 15% 0 15%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  font-size: calc(10px + 2vmin);
+  color: rgba(68, 68, 68, 0.541);
+}
+
 
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
